components/ads_8.1/ace.hpp

//-- type declarations -------------------------------------------------------
typedef char *PAceChar;
typedef int ADSHANDLE;
typedef int *PADSHANDLE;
typedef Word *PWord;
typedef Word UNSIGNED16;
typedef Word *PUNSIGNED16;
typedef int SIGNED32;
typedef int *PSIGNED32;
typedef unsigned UNSIGNED32;
typedef unsigned *PUNSIGNED32;
extern "C" unsigned __stdcall AdsDDRemoveProcedure(int hDictionary, char * pucName);
extern "C" unsigned __stdcall AdsDDAddProcedure(int hDictionary, char * pucName, char * pucDll, char * pucProcName, unsigned ulInvokeOption, char * pucInParams, char * pucOutParams, char * pucComments);
extern "C" unsigned __stdcall AdsDDSetUserGroupProperty(int hObj, char * pucGroupName, Word usPropertyID, void * pvProperty, Word usPropertyLen);
extern "C" unsigned __stdcall AdsDDGetUserGroupProperty(int hObj, char * pucGroupName, Word usPropertyID, void * pvProperty, PUNSIGNED16 pusPropertyLen);
extern "C" unsigned __stdcall AdsDDSetObjectAccessRights(int hObj, char * pucObjectName, char * pucAccessorName, char * pucAllowedRights);
extern "C" unsigned __stdcall AdsDDGetUserProperty(int hObj, char * pucUserName, Word usPropertyID, void * pvProperty, PUNSIGNED16 pusPropertyLen);
extern "C" unsigned __stdcall AdsDDSetUserProperty(int hObj, char * pucUserName, Word usPropertyID, void * pvProperty, Word usPropertyLen);
extern "C" unsigned __stdcall AdsDDDeleteUserGroup(int hObj, char * pucGroupName);
extern "C" unsigned __stdcall AdsDDCreateUserGroup(int hObj, char * pucGroupName, char * pucDescription);
extern "C" unsigned __stdcall AdsDDRemoveUserFromGroup(int hObj, char * pucGroupName, char * pucUserName);
extern "C" unsigned __stdcall AdsDDAddUserToGroup(int hObj, char * pucGroupName, char * pucUserName);
extern "C" unsigned __stdcall AdsDDDeleteUser(int hObj, char * pucUserName);
extern "C" unsigned __stdcall AdsDDCreateUser(int hObj, char * pucGroupName, char * pucUserName, char * pucPassword, char * pucDescription);
extern "C" unsigned __stdcall AdsDDGetProcedureProperty(int hObj, char * pucProcName, Word usProperty, void * pvProperty, PUNSIGNED16 usPropertyLen);
extern "C" unsigned __stdcall AdsDDSetProcedureProperty(int hObj, char * pucProcedureName, Word usPropertyID, void * pvProperty, Word usPropertyLen);
extern "C" unsigned __stdcall AdsDDAddView(int hDictionary, char * pucName, char * pucCommnets, char * pucSQL);
extern "C" unsigned __stdcall AdsDDRemoveView(int hDictionary, char * pucName);
extern "C" unsigned __stdcall AdsDDGetViewProperty(int hDictionary, char * pucViewName, Word usPropertyID, void * pvproperty, PUNSIGNED16 usPropertyLen);
extern "C" unsigned __stdcall AdsDDSetViewProperty(int hObj, char * pucViewName, Word usPropertyID, void * pvProperty, Word usPropertyLen);
extern "C" unsigned __stdcall AdsDDDeleteIndex(int hDictionary, char * pucTableName, char * pucIndexName);
extern "C" unsigned __stdcall AdsDDGetRefIntegrityProperty(int hObject, char * pucRefName, Word usPropertyID, void * pucProperty, PUNSIGNED16 pusPropertyLen);
extern "C" unsigned __stdcall AdsDDRemoveRefIntegrity(int hDictionary, char * pucRefName);
extern "C" unsigned __stdcall AdsDisableLocalConnections(void);
extern "C" unsigned __stdcall AdsGetLastAutoinc(int hObj, PUNSIGNED32 pulAutoincVal);
extern "C" unsigned __stdcall AdsFindClose(int hConnect, int lHandle);
extern "C" unsigned __stdcall AdsFindFirstTable(int hConnect, char * pucFileMask, char * pucFirstFile, PWord pusFileLen, PSIGNED32 lHandle);
extern "C" unsigned __stdcall AdsFindNextTable(int hConnect, int lHandle, char * pucFileName, PWord pusFileLen);
extern "C" unsigned __stdcall AdsFindFirstTable62(int hConnect, char * pucFileMask, char * pucFirstDD, PWord pusDDLen, char * pucFirstFile, PWord pusFileLen, PSIGNED32 lHandle);
extern "C" unsigned __stdcall AdsFindNextTable62(int hConnect, int lHandle, char * pucDDName, PWord pusDDLen, char * pucFileName, PWord pusFileLen);
extern "C" unsigned __stdcall AdsGetNumParams(int hStatement, PWord pusNumParams);
extern "C" unsigned __stdcall AdsRestructureTable(int hObj, char * pucName, char * pucPassword, Word usTableType, Word usCharType, Word usLockType, Word usCheckRights, char * pucAddFields, char * pucDeleteFields, char * pucChangeFields);
extern "C" unsigned __stdcall AdsGetSQLStatementHandle(int hCursor, PADSHANDLE phStmt);
extern "C" unsigned __stdcall AdsDDCreateRefIntegrity62(int hDictionary, char * pucRIName, char * pucFailTableName, char * pucParentTableName, char * pucParentTagName, char * pucChildTableName, char * pucChildTagName, Word usUpdateRule, Word usDeleteRule, char * pucNoPrimaryKeyError, char * pucCascadeError);
extern "C" unsigned __stdcall AdsDDCreateTrigger(int hDictionary, char * pucName, char * pucTableName, unsigned ulTriggerType, unsigned ulEventTypes, unsigned ulContainerType, char * pucContainer, char * pucFunctionName, unsigned ulPriority, char * pucComments, unsigned ulOptions);
extern "C" unsigned __stdcall AdsDDRemoveTrigger(int hDictionary, char * pucName);
extern "C" unsigned __stdcall AdsDDGetTriggerProperty(int hDictionary, char * pucTriggerName, Word usPropertyID, void * pvproperty, PUNSIGNED16 usPropertyLen);