components/ads_8.1/ace.pas


   function AdsDDCreateRefIntegrity62( hDictionary : ADSHANDLE;
                                       pucRIName : PAceChar;
                                       pucFailTableName : PAceChar;
                                       pucParentTableName : PAceChar;
                                       pucParentTagName : PAceChar;
                                       pucChildTableName : PAceChar;
                                       pucChildTagName : PAceChar;
                                       usUpdateRule : UNSIGNED16;
                                       usDeleteRule : UNSIGNED16;
                                       pucNoPrimaryKeyError : PAceChar;
                                       pucCascadeError : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDRemoveRefIntegrity( hDictionary : ADSHANDLE;
                                     pucRefName : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDGetRefIntegrityProperty( hObject : ADSHANDLE;
                                       pucRefName : PAceChar;
                                       usPropertyID : UNSIGNED16;
                                       pucProperty : pointer;
                                       pusPropertyLen : PUNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}


   function AdsDDDeleteIndex( hDictionary : ADSHANDLE;
                              pucTableName : PAceChar;
                              pucIndexName : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDAddView( hDictionary : ADSHANDLE;
                          pucName : PAceChar;
                          pucCommnets : PAceChar;
                          pucSQL : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDRemoveView( hDictionary : ADSHANDLE;
                             pucName : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDCreateTrigger( hDictionary : ADSHANDLE;
                                pucName : PAceChar;
                                pucTableName : PAceChar;
                                ulTriggerType : UNSIGNED32;
                                ulEventTypes : UNSIGNED32;
                                ulContainerType : UNSIGNED32;
                                pucContainer : PAceChar;
                                pucFunctionName : PAceChar;
                                ulPriority : UNSIGNED32;
                                pucComments : PAceChar;
                                ulOptions : UNSIGNED32 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDRemoveTrigger( hDictionary : ADSHANDLE;
                                pucName : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDGetViewProperty( hDictionary : ADSHANDLE;
                                  pucViewName : PAceChar;
                                  usPropertyID : UNSIGNED16;
                                  pvproperty : pointer;
                                  usPropertyLen : PUNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDSetViewProperty( hObj : ADSHANDLE;
                                  pucViewName : PAceChar;
                                  usPropertyID : UNSIGNED16;
                                  pvProperty : pointer;
                                  usPropertyLen : UNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDGetTriggerProperty( hDictionary : ADSHANDLE;
                                     pucTriggerName : PAceChar;
                                     usPropertyID : UNSIGNED16;
                                     pvproperty : pointer;
                                     usPropertyLen : PUNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDisableLocalConnections : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetLastAutoinc( hObj : ADSHANDLE;
                               pulAutoincVal : PUNSIGNED32 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDGetProcedureProperty( hObj : ADSHANDLE;
                                       pucProcName : PAceChar;
                                       usProperty  : UNSIGNED16;
                                       pvProperty  : pointer;
                                       usPropertyLen : PUNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDSetProcedureProperty( hObj : ADSHANDLE;
                                       pucProcedureName : PAceChar;
                                       usPropertyID : UNSIGNED16;
                                       pvProperty : pointer;
                                       usPropertyLen : UNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDCreateUser( hObj : ADSHANDLE;
                             pucGroupName : PAceChar;
                             pucUserName  : PAceChar;
                             pucPassword  : PAceChar;
                             pucDescription : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}


   function AdsDDDeleteUser( hObj : ADSHANDLE;
                             pucUserName : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDAddUserToGroup( hObj : ADSHANDLE;
                                 pucGroupName : PAceChar;
                                 pucUserName  : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDRemoveUserFromGroup( hObj : ADSHANDLE;
                                      pucGroupName : PAceChar;
                                      pucUserName  : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDCreateUserGroup( hObj : ADSHANDLE;
                                  pucGroupName : PAceChar;
                                  pucDescription : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDDeleteUserGroup( hObj : ADSHANDLE;
                                  pucGroupName : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDSetUserProperty( hObj : ADSHANDLE;
                                  pucUserName : PAceChar;
                                  usPropertyID : UNSIGNED16;
                                  pvProperty : pointer;
                                  usPropertyLen : UNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDGetUserProperty( hObj : ADSHANDLE;
                                  pucUserName : PAceChar;
                                  usPropertyID : UNSIGNED16;
                                  pvProperty : pointer;
                                  pusPropertyLen : PUNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDGetUserGroupProperty( hObj : ADSHANDLE;
                                       pucGroupName : PAceChar;
                                       usPropertyID : UNSIGNED16;
                                       pvProperty : pointer;
                                       pusPropertyLen : PUNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDSetUserGroupProperty( hObj : ADSHANDLE;
                                       pucGroupName : PAceChar;
                                       usPropertyID : UNSIGNED16;
                                       pvProperty : pointer;
                                       usPropertyLen : UNSIGNED16 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}


   function AdsDDSetObjectAccessRights( hObj : ADSHANDLE;
                                        pucObjectName : PAceChar;
                                        pucAccessorName : PAceChar;
                                        pucAllowedRights : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDAddProcedure( hDictionary : ADSHANDLE;
                               pucName     : PAceChar;
                               pucDll      : PAceChar;
                               pucProcName : PAceChar;
                               ulInvokeOption : UNSIGNED32;
                               pucInParams : PAceChar;
                               pucOutParams : PAceChar;
                               pucComments  : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsDDRemoveProcedure( hDictionary : ADSHANDLE;
                                  pucName     : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsFindClose( hConnect : ADSHANDLE; lHandle : SIGNED32 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsFindFirstTable( hConnect     : ADSHANDLE;
                               pucFileMask  : PAceChar;
                               pucFirstFile : PAceChar;
                               pusFileLen   : pWord;
                               lHandle      : pSIGNED32 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsFindNextTable( hConnect    : ADSHANDLE;
                              lHandle     : SIGNED32;
                              pucFileName : PAceChar;
                              pusFileLen  : pWord ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsFindFirstTable62( hConnect     : ADSHANDLE;
                                 pucFileMask  : PAceChar;
                                 pucFirstDD   : PAceChar;
                                 pusDDLen     : pWord;
                                 pucFirstFile : PAceChar;
                                 pusFileLen   : pWord;
                                 lHandle      : pSIGNED32 ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsFindNextTable62( hConnect    : ADSHANDLE;
                                lHandle     : SIGNED32;
                                pucDDName   : PAceChar;
                                pusDDLen    : pWord;
                                pucFileName : PAceChar;
                                pusFileLen  : pWord ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetNumParams( hStatement   : ADSHANDLE;
                             pusNumParams : pWord ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsRestructureTable( hObj          : ADSHANDLE;
                                 pucName       : PAceChar;
                                 pucPassword   : PAceChar;
                                 usTableType   : UNSIGNED16;
                                 usCharType    : UNSIGNED16;
                                 usLockType    : UNSIGNED16;
                                 usCheckRights : UNSIGNED16;
                                 pucAddFields  : PAceChar;
                                 pucDeleteFields : PAceChar;
                                 pucChangeFields : PAceChar ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetSQLStatementHandle( hCursor : ADSHANDLE;
                                      phStmt : PADSHANDLE ) : UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
